@@ -1,34 +1,37 @@
 package com.taxonomy;
 
-import com.taxonomy.dto.TaxonomyRelationDto;
-import com.taxonomy.model.RelationType;
-import com.taxonomy.catalog.model.TaxonomyNode;
-import com.taxonomy.catalog.model.TaxonomyRelation;
 import com.taxonomy.catalog.repository.TaxonomyNodeRepository;
 import com.taxonomy.catalog.repository.TaxonomyRelationRepository;
 import com.taxonomy.catalog.service.TaxonomyRelationService;
 import com.taxonomy.catalog.service.TaxonomyService;
+import com.taxonomy.dto.TaxonomyRelationDto;
+import com.taxonomy.model.RelationType;
+import com.taxonomy.relations.repository.RelationDecisionProjectionCheckpointRepository;
+import com.taxonomy.relations.repository.RelationDecisionProjectionRepository;
+import com.taxonomy.relations.repository.RelationProjectionRecoveryRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-import org.springframework.security.test.context.support.WithMockUser;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
 @AutoConfigureMockMvc
-@WithMockUser(roles = "ADMIN")
+@WithMockUser(username = "relation-read-contract-admin", roles = "ADMIN")
 class TaxonomyRelationTests {
 
     @Autowired
@@ -41,31 +44,48 @@ class TaxonomyRelationTests {
     private TaxonomyRelationRepository relationRepository;
 
     @Autowired
+    private RelationDecisionProjectionRepository projectionRepository;
+
+    @Autowired
+    private RelationDecisionProjectionCheckpointRepository checkpointRepository;
+
+    @Autowired
+    private RelationProjectionRecoveryRepository recoveryRepository;
+
+    @Autowired
     private TaxonomyNodeRepository nodeRepository;
 
     @Autowired
     private TaxonomyService taxonomyService;
 
     @BeforeEach
-    void cleanRelations() {
+    void cleanRelationReadModels() {
+        recoveryRepository.deleteAll();
+        checkpointRepository.deleteAll();
+        projectionRepository.deleteAll();
         relationRepository.deleteAll();
     }
 
     @Test
     void contextLoadsWithRelationService() {
         assertThat(relationService).isNotNull();
+        assertThat(nodeRepository).isNotNull();
     }
 
     @Test
-    void initialRelationCountIsZero() {
+    void initialLegacyRelationCountIsZero() {
         assertThat(relationService.countRelations()).isEqualTo(0);
     }
 
     @Test
-    void createRelationPersistsAndReturnsDto() {
-        TaxonomyRelationDto dto = relationService.createRelation("BP", "CP",
-                RelationType.SUPPORTS, "BP supports CP", "test");
-        assertThat(dto).isNotNull();
+    void legacyCompatibilityServiceStillPersistsAndMapsRows() {
+        TaxonomyRelationDto dto = relationService.createRelation(
+                "BP",
+                "CP",
+                RelationType.SUPPORTS,
+                "BP supports CP",
+                "test");
+
         assertThat(dto.getId()).isNotNull();
         assertThat(dto.getSourceCode()).isEqualTo("BP");
         assertThat(dto.getTargetCode()).isEqualTo("CP");
@@ -75,153 +95,107 @@ class TaxonomyRelationTests {
     }
 
     @Test
-    void getRelationsForNodeReturnsIncomingAndOutgoing() {
-        relationService.createRelation("BP", "CP", RelationType.SUPPORTS, null, "test");
-        relationService.createRelation("CR", "BP", RelationType.DEPENDS_ON, null, "test");
+    void legacyCompatibilityQueriesRemainAvailableDuringMigrationFallback() {
+        relationService.createRelation(
+                "BP", "CP", RelationType.SUPPORTS, null, "test");
+        relationService.createRelation(
+                "CR", "BP", RelationType.DEPENDS_ON, null, "test");
+        relationService.createRelation(
+                "CP", "CR", RelationType.REALIZES, null, "test");
 
-        List<TaxonomyRelationDto> relations = relationService.getRelationsForNode("BP");
-        assertThat(relations).hasSize(2);
+        List<TaxonomyRelationDto> nodeRelations =
+                relationService.getRelationsForNode("BP");
+        List<TaxonomyRelationDto> supports =
+                relationService.getRelationsByType(RelationType.SUPPORTS);
+
+        assertThat(nodeRelations).hasSize(2);
+        assertThat(supports).singleElement()
+                .extracting(TaxonomyRelationDto::getRelationType)
+                .isEqualTo("SUPPORTS");
     }
 
     @Test
-    void getRelationsByTypeFiltersCorrectly() {
-        relationService.createRelation("BP", "CP", RelationType.SUPPORTS, null, "test");
-        relationService.createRelation("CP", "CR", RelationType.REALIZES, null, "test");
-
-        List<TaxonomyRelationDto> supports = relationService.getRelationsByType(RelationType.SUPPORTS);
-        assertThat(supports).hasSize(1);
-        assertThat(supports.get(0).getRelationType()).isEqualTo("SUPPORTS");
-
-        List<TaxonomyRelationDto> realizes = relationService.getRelationsByType(RelationType.REALIZES);
-        assertThat(realizes).hasSize(1);
-        assertThat(realizes.get(0).getRelationType()).isEqualTo("REALIZES");
-    }
-
-    @Test
-    void deleteRelationRemovesIt() {
-        TaxonomyRelationDto dto = relationService.createRelation("BP", "CP",
-                RelationType.SUPPORTS, null, "test");
-        assertThat(relationService.countRelations()).isEqualTo(1);
+    void legacyCompatibilityDeleteAndDuplicateGuardRemainIntact() {
+        TaxonomyRelationDto dto = relationService.createRelation(
+                "BP", "CP", RelationType.SUPPORTS, null, "test");
+        assertThatThrownBy(() -> relationService.createRelation(
+                "BP", "CP", RelationType.SUPPORTS, null, "test"))
+                .isInstanceOf(Exception.class);
 
         relationService.deleteRelation(dto.getId());
-        assertThat(relationService.countRelations()).isEqualTo(0);
+
+        assertThat(relationService.countRelations()).isZero();
     }
 
     @Test
-    void duplicateRelationIsRejected() {
-        relationService.createRelation("BP", "CP", RelationType.SUPPORTS, null, "test");
-        assertThatThrownBy(() -> {
-            relationService.createRelation("BP", "CP", RelationType.SUPPORTS, null, "test");
-        }).isInstanceOf(Exception.class);
-    }
-
-    @Test
-    void relationsApiCountEndpointReturnsZero() throws Exception {
-        mockMvc.perform(get("/api/relations/count").accept(MediaType.APPLICATION_JSON))
+    void productReadCountUsesObservableLegacyFallbackBeforeFirstBuild()
+            throws Exception {
+        mockMvc.perform(get("/api/relations/count")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
+                .andExpect(header().string(
+                        "X-Taxonomy-Relation-Read-Model",
+                        "LEGACY_FALLBACK"))
+                .andExpect(header().string(
+                        "X-Taxonomy-Relation-Projection-State",
+                        "NOT_BUILT"))
+                .andExpect(header().exists("ETag"))
                 .andExpect(jsonPath("$.count").value(0));
     }
 
     @Test
-    void relationsApiGetAllReturnsEmptyList() throws Exception {
-        mockMvc.perform(get("/api/relations").accept(MediaType.APPLICATION_JSON))
+    void productReadAllUsesTheSameObservableFallback() throws Exception {
+        mockMvc.perform(get("/api/relations")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
+                .andExpect(header().string(
+                        "X-Taxonomy-Relation-Read-Model",
+                        "LEGACY_FALLBACK"))
                 .andExpect(jsonPath("$").isArray())
                 .andExpect(jsonPath("$.length()").value(0));
     }
 
     @Test
-    void relationsApiPostCreatesRelation() throws Exception {
-        mockMvc.perform(post("/api/relations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"sourceCode\":\"BP\",\"targetCode\":\"CP\",\"relationType\":\"SUPPORTS\"}"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.sourceCode").value("BP"))
-                .andExpect(jsonPath("$.targetCode").value("CP"))
-                .andExpect(jsonPath("$.relationType").value("SUPPORTS"));
-    }
+    void typeAndNodeProductReadsFilterOneFallbackSnapshot() throws Exception {
+        relationService.createRelation(
+                "BP", "CP", RelationType.SUPPORTS, null, "test");
+        relationService.createRelation(
+                "CP", "CR", RelationType.REALIZES, null, "test");
+        relationService.createRelation(
+                "CR", "BP", RelationType.DEPENDS_ON, null, "test");
 
-    @Test
-    void relationsApiPostReturnsBadRequestForMissingFields() throws Exception {
-        mockMvc.perform(post("/api/relations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"sourceCode\":\"BP\"}"))
-                .andExpect(status().isBadRequest());
-    }
-
-    @Test
-    void relationsApiPostReturnsBadRequestForUnknownType() throws Exception {
-        mockMvc.perform(post("/api/relations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"sourceCode\":\"BP\",\"targetCode\":\"CP\",\"relationType\":\"UNKNOWN_TYPE\"}"))
-                .andExpect(status().isBadRequest());
-    }
-
-    @Test
-    void relationsApiPostReturnsBadRequestForUnknownNode() throws Exception {
-        mockMvc.perform(post("/api/relations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"sourceCode\":\"NONEXISTENT\",\"targetCode\":\"CP\",\"relationType\":\"SUPPORTS\"}"))
-                .andExpect(status().isBadRequest());
-    }
-
-    @Test
-    void relationsApiGetByTypeFilters() throws Exception {
-        mockMvc.perform(post("/api/relations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"sourceCode\":\"BP\",\"targetCode\":\"CP\",\"relationType\":\"SUPPORTS\"}"))
-                .andExpect(status().isOk());
-        mockMvc.perform(post("/api/relations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"sourceCode\":\"CP\",\"targetCode\":\"CR\",\"relationType\":\"REALIZES\"}"))
-                .andExpect(status().isOk());
-
-        mockMvc.perform(get("/api/relations").param("type", "SUPPORTS").accept(MediaType.APPLICATION_JSON))
+        mockMvc.perform(get("/api/relations")
+                        .param("type", "SUPPORTS")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.length()").value(1))
-                .andExpect(jsonPath("$[0].relationType").value("SUPPORTS"));
-    }
-
-    @Test
-    void relationsApiGetForNodeReturnsIncomingAndOutgoing() throws Exception {
-        mockMvc.perform(post("/api/relations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"sourceCode\":\"BP\",\"targetCode\":\"CP\",\"relationType\":\"SUPPORTS\"}"))
-                .andExpect(status().isOk());
-        mockMvc.perform(post("/api/relations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"sourceCode\":\"CR\",\"targetCode\":\"BP\",\"relationType\":\"DEPENDS_ON\"}"))
-                .andExpect(status().isOk());
-
-        mockMvc.perform(get("/api/node/BP/relations").accept(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$[0].relationType")
+                        .value("SUPPORTS"));
+        mockMvc.perform(get("/api/node/BP/relations")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.length()").value(2));
     }
 
     @Test
-    void relationsApiDeleteRemovesRelation() throws Exception {
-        String createResponse = mockMvc.perform(post("/api/relations")
+    void dbFirstWriteEndpointsAreExplicitlyRetired() throws Exception {
+        mockMvc.perform(post("/api/relations")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"sourceCode\":\"BP\",\"targetCode\":\"CP\",\"relationType\":\"SUPPORTS\"}"))
-                .andExpect(status().isOk())
-                .andReturn().getResponse().getContentAsString();
-
-        // Extract id from response manually using simple string search
-        int idStart = createResponse.indexOf("\"id\":") + 5;
-        int idEnd = createResponse.indexOf(",", idStart);
-        if (idEnd < 0) idEnd = createResponse.indexOf("}", idStart);
-        long id = Long.parseLong(createResponse.substring(idStart, idEnd).trim());
-
-        mockMvc.perform(delete("/api/relations/" + id))
-                .andExpect(status().isNoContent());
-
-        assertThat(relationService.countRelations()).isEqualTo(0);
+                .andExpect(status().isGone());
+        mockMvc.perform(delete("/api/relations/42"))
+                .andExpect(status().isGone());
     }
 
     @Test
     void relationDtoMappingIsCorrect() {
-        TaxonomyRelationDto dto = relationService.createRelation("BP", "CP",
-                RelationType.SUPPORTS, "A description", "manual");
+        TaxonomyRelationDto dto = relationService.createRelation(
+                "BP",
+                "CP",
+                RelationType.SUPPORTS,
+                "A description",
+                "manual");
+
         assertThat(dto.getSourceCode()).isEqualTo("BP");
         assertThat(dto.getSourceName()).isNotNull();
         assertThat(dto.getTargetCode()).isEqualTo("CP");
@@ -234,18 +208,15 @@ class TaxonomyRelationTests {
 
     @Test
     void nodeDtoContainsRelationFields() {
-        // After loading, the DTO should have outgoing/incoming relation lists (empty by default)
         var tree = taxonomyService.getFullTree();
         assertThat(tree).isNotEmpty();
-        var root = tree.get(0);
+        var root = tree.getFirst();
         assertThat(root.getOutgoingRelations()).isNotNull();
         assertThat(root.getIncomingRelations()).isNotNull();
     }
 
     @Test
     void missingRelationsSheetDoesNotBreakLoader() {
-        // The taxonomy was already loaded without a Relations sheet — all 8 roots should exist
-        var tree = taxonomyService.getFullTree();
-        assertThat(tree).hasSize(8);
+        assertThat(taxonomyService.getFullTree()).hasSize(8);
     }
 }
